--- a/index.css
+++ b/index.css
@@ -11,7 +11,7 @@ body {
 }
 
 #container {
-    margin-top: 100px;
+    margin-top: 60px;
     width: 80%;
     max-width: 400px;
     margin-inline: auto;
@@ -50,4 +50,16 @@ button {
 button:hover {
     filter: brightness(1.2);
     cursor: pointer;
+}
+
+#resposta {
+    margin-top: 30px;
+    transition: opacity 1s;
+}
+
+#resposta div {
+    font-size: 16px;
+    font-weight: normal;
+    opacity: 0.9;
+    margin-bottom: 18px;
 }
