--- a/index.css
+++ b/index.css
@@ -4,7 +4,7 @@
 }
 
 body {
-    background-color: black;
+    background-color: #282a36;
     color: white;
     text-align: center;
     font-family: sans-serif;
@@ -42,7 +42,7 @@ input {
 
 button {
     border: none;
-    background-color: blueviolet;
+    background-color: #ff5555;
     color: white;
     transition: filter .2s;
 }
