--- a/index.css
+++ b/index.css
@@ -11,9 +11,9 @@ body {
 }
 
 #container {
-    margin-top: 60px;
-    width: 80%;
-    max-width: 400px;
+    margin-top: 30px;
+    width: 88%;
+    max-width: 420px;
     margin-inline: auto;
 }
 
@@ -24,11 +24,11 @@ h1 {
 }
 
 p {
-    margin-bottom: 40px;
+    margin-bottom: 20px;
     opacity: 0.7;
 }
 
-input, button {
+input {
     display: block;
     width: 100%;
     padding: 20px;
@@ -41,14 +41,20 @@ input {
 }
 
 button {
+    display: inline-block;
+    width: 45%;
+    padding: 10px;
+    font-size: 16px;
+    border-radius: 8px;
     border: none;
     background-color: #1DD3B0;
     color: #1B0430;
     transition: filter .2s;
+    margin: 8px;
 }
 
 button:hover {
-    filter: brightness(1.2);
+    filter: brightness(1.3);
     cursor: pointer;
 }
 
