ajustes de tamanho de fonte

--- a/index.css
+++ b/index.css
@@ -1,56 +1,64 @@
+@import url('https://fonts.googleapis.com/css2?family=Amaranth:wght@400;700&display=swap');
+
 * {
     margin: 0;
     box-sizing: border-box;
+}
+
+:root {
+    font-size: 62.5%;
 }
 
 body {
     background-color: #1B0430;
     color: #1DD3B0;
     text-align: center;
-    font-family: sans-serif;
+    font-family: Amaranth, sans-serif;
 }
 
 #container {
-    margin-top: 30px;
+    margin-top: 3rem;
     width: 88%;
-    max-width: 420px;
+    max-width: 42rem;
     margin-inline: auto;
 }
 
 h1 {
-    margin-top: 40px;
-    margin-bottom: 10px;
+    margin-top: 3rem;
+    margin-bottom: 1rem;
     opacity: 0.9;
+    font-size: 4rem;
 }
 
 p {
-    margin-bottom: 20px;
+    margin-bottom: 2rem;
     opacity: 0.7;
+    font-size: 1.8rem;
 }
 
 input {
     display: block;
     width: 100%;
-    padding: 20px;
-    font-size: 20px;
+    padding: 2rem;
+    font-size: 2rem;
     border-radius: 8px;
 }
 
 input {
-    margin-bottom: 20px;
+    margin-bottom: 2rem;
 }
 
 button {
     display: inline-block;
     width: 45%;
-    padding: 10px;
-    font-size: 16px;
+    padding: 1rem;
+    font-size: 1.7rem;
     border-radius: 8px;
     border: none;
     background-color: #1DD3B0;
     color: #1B0430;
     transition: filter .2s;
-    margin: 8px;
+    margin: 0.8rem;
 }
 
 button:hover {
@@ -59,12 +67,13 @@ button:hover {
 }
 
 #resposta {
-    margin-top: 30px;
+    margin-top: 2rem;
     transition: opacity 1s;
+    font-size: 2.6rem;
 }
 
 #resposta div {
-    font-size: 16px;
+    font-size: 1.6rem;
     font-weight: normal;
     opacity: 0.9;
     margin-bottom: 18px;
