--- a/index.css
+++ b/index.css
@@ -17,7 +17,7 @@ body {
 }
 
 img {
-    max-width: 16rem;
+    max-width: 15rem;
 }
 
 #container {
@@ -28,7 +28,7 @@ img {
 }
 
 h1 {
-    margin-top: 3rem;
+    margin-top: 2.5rem;
     margin-bottom: 1rem;
     opacity: 0.9;
     font-size: 4.2rem;
@@ -49,7 +49,7 @@ input {
 }
 
 input {
-    margin-bottom: 2rem;
+    margin-bottom: 1.5rem;
 }
 
 button {
@@ -60,14 +60,15 @@ button {
     border-radius: 8px;
     border: none;
     background-color: #1DD3B0;
+    box-shadow: #1D23B0 4px 4px 0px;
     color: #1B0430;
-    transition: filter .2s;
+    transition: transform 200ms, box-shadow 200ms;
     margin: 0.8rem;
 }
 
-button:hover {
-    filter: brightness(1.3);
-    cursor: pointer;
+button:active {
+    transform: translateY(4px) translateX(4px);
+    box-shadow: #1D23B0 0px 0px 0px;
 }
 
 #resposta {
